--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
 			<artifactId>lucene-queryparser</artifactId>
 			<version>5.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>jaws</groupId>
+			<artifactId>edu</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -116,5 +120,11 @@
 			<version>3.4.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
